--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
-/*  your css code here. If applicable */
+body{
+	background-color:lightseagreen;
+}
+img{
+	width:200px;
+	height:200px;
+}
+table{
+	width:500px;
+}
